# utk_collection_builder

./: .gitignore  .readthedocs.yml  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/contents/: 0_prerequisites.rst  1_outline.rst  2_getting_started.rst  3_adding_your_content_to_cb.rst  4_more_customization.rst  5_aboutness_and_modifying_pages.rst
